<resources>
    <string name="app_name">Attemp1_calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="month">Month</string>
    <string name="settings_title">Settings Page</string>
    <string name="event_add_title">Event Add Page</string>
    <string name="event_category_title">Event Category</string>
    <string name="event_title">Event Title</string>
    <string name="event_desc">Event Description.....</string>
    <string name="selectDate_txt">Select Date</string>
    <string name="selectTime_txt">Select Time</string>
    <string name="add_event_btn_txt">Add Event</string>
    <string name="darkModeTxt">DARK MODE</string>
    <string name="infoTxt">Info</string>

    <string-array name="event_categories">
        <item>Assignments</item>
        <item>Repetitive</item>
        <item>Major</item>
    </string-array>
</resources>