<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/settings_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangleView"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_txtView" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/rectangleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkModeTxt"
            android:textSize="30sp"
            android:textColor="#C1C700"
            android:layout_marginStart="50dp"
            android:layout_gravity="start"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="50dp"
            android:switchMinWidth="70sp"
            android:layout_gravity="end"
            android:layout_weight="0" />

    </LinearLayout>

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:text="@string/infoTxt"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/info_btn"
        app:backgroundTint="@null"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>